@@ -4,6 +4,7 @@ Overview of changes in lightdm 0.2.2
     * Look for face images in ~/.face and ~/.face.icon
     * Put .vapi file in unversioned vala directory
     * Fix compiling without QT
+    * Choose the VT to open the display on
 
 Overview of changes in lightdm 0.2.1
 
